<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/account_category">

        <PreferenceScreen
            app:title="@string/signature"
            app:summary=" > CLICK">
        </PreferenceScreen>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/activity_category">

        <PreferenceScreen
            app:title="@string/product"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/setting_category">

        <PreferenceScreen
            app:title="@string/notice"/>

        <PreferenceScreen
            app:title="@string/service_center" />

        <SwitchPreferenceCompat
            app:title="@string/alarm" />

        <Preference
            app:title="@string/version"
            app:summary="2.37.1 (버전정보설정해야함)"/>

    </PreferenceCategory>

</PreferenceScreen>


