<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleLine="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_alphabet_a"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/alphabet_a"
            app:checkedIcon="@drawable/ic_baseline_check_24"
            app:checkedIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_alphabet_b"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/alphabet_b"
            app:checkedIcon="@drawable/ic_baseline_check_24"
            app:checkedIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_alphabet_c"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/alphabet_c"
            app:checkedIcon="@drawable/ic_baseline_check_24"
            app:checkedIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_alphabet_d"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/alphabet_d"
            app:checkedIcon="@drawable/ic_baseline_check_24"
            app:checkedIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_alphabet_e"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/alphabet_e"
            app:checkedIcon="@drawable/ic_baseline_check_24"
            app:checkedIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_alphabet_f"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/alphabet_f"
            app:checkedIcon="@drawable/ic_baseline_check_24"
            app:checkedIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_alphabet_g"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/alphabet_g"
            app:checkedIcon="@drawable/ic_baseline_check_24"
            app:checkedIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_alphabet_h"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/alphabet_h"
            app:checkedIcon="@drawable/ic_baseline_check_24"
            app:checkedIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_alphabet_i"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/alphabet_i"
            app:checkedIcon="@drawable/ic_baseline_check_24"
            app:checkedIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_alphabet_j"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/alphabet_j"
            app:checkedIcon="@drawable/ic_baseline_check_24"
            app:checkedIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_alphabet_k"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/alphabet_k"
            app:checkedIcon="@drawable/ic_baseline_check_24"
            app:checkedIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_alphabet_l"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/alphabet_l"
            app:checkedIcon="@drawable/ic_baseline_check_24"
            app:checkedIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_alphabet_m"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/alphabet_m"
            app:checkedIcon="@drawable/ic_baseline_check_24"
            app:checkedIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_alphabet_n"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/alphabet_n"
            app:checkedIcon="@drawable/ic_baseline_check_24"
            app:checkedIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_alphabet_o"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/alphabet_o"
            app:checkedIcon="@drawable/ic_baseline_check_24"
            app:checkedIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_alphabet_p"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/alphabet_p"
            app:checkedIcon="@drawable/ic_baseline_check_24"
            app:checkedIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_alphabet_q"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/alphabet_q"
            app:checkedIcon="@drawable/ic_baseline_check_24"
            app:checkedIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_alphabet_r"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/alphabet_r"
            app:checkedIcon="@drawable/ic_baseline_check_24"
            app:checkedIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_alphabet_s"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/alphabet_s"
            app:checkedIcon="@drawable/ic_baseline_check_24"
            app:checkedIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_alphabet_t"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/alphabet_t"
            app:checkedIcon="@drawable/ic_baseline_check_24"
            app:checkedIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_alphabet_u"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/alphabet_u"
            app:checkedIcon="@drawable/ic_baseline_check_24"
            app:checkedIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_alphabet_v"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/alphabet_v"
            app:checkedIcon="@drawable/ic_baseline_check_24"
            app:checkedIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_alphabet_w"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/alphabet_w"
            app:checkedIcon="@drawable/ic_baseline_check_24"
            app:checkedIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_alphabet_x"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/alphabet_x"
            app:checkedIcon="@drawable/ic_baseline_check_24"
            app:checkedIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_alphabet_y"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/alphabet_y"
            app:checkedIcon="@drawable/ic_baseline_check_24"
            app:checkedIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_alphabet_z"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/alphabet_z"
            app:checkedIcon="@drawable/ic_baseline_check_24"
            app:checkedIconVisible="true" />

    </com.google.android.material.chip.ChipGroup>
</HorizontalScrollView>