<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleLine="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_denim"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/material_denim"
            app:checkedIcon="@drawable/ic_baseline_check_24"
            app:checkedIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_cotton"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/material_cotton"
            app:checkedIcon="@drawable/ic_baseline_check_24"
            app:checkedIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_leather"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/material_leather"
            app:checkedIcon="@drawable/ic_baseline_check_24"
            app:checkedIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_linen"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/material_linen"
            app:checkedIcon="@drawable/ic_baseline_check_24"
            app:checkedIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_silk"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/material_silk"
            app:checkedIcon="@drawable/ic_baseline_check_24"
            app:checkedIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_velvet"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/material_velvet"
            app:checkedIcon="@drawable/ic_baseline_check_24"
            app:checkedIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_coduroy"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/material_coduroy"
            app:checkedIcon="@drawable/ic_baseline_check_24"
            app:checkedIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_suede"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/material_suede"
            app:checkedIcon="@drawable/ic_baseline_check_24"
            app:checkedIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_polyester"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/material_polyester"
            app:checkedIcon="@drawable/ic_baseline_check_24"
            app:checkedIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_nylon"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:checked="false"
            android:text="@string/material_nylon"
            app:checkedIcon="@drawable/ic_baseline_check_24"
            app:checkedIconVisible="true" />

    </com.google.android.material.chip.ChipGroup>
</HorizontalScrollView>